# hybridurb

./: .buildinfo  .gitignore  LICENSE  README.md  README.rst  api.html  changelog.html  environment.yaml  examples_index.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: api.doctree  changelog.doctree  environment.pickle  examples_index.doctree  index.doctree
.doctrees/dev/: dev_guide.doctree  dev_install.doctree  intro.doctree
.doctrees/getting_started/: installation.doctree  intro.doctree  publications.doctree  quick_overview.doctree  use_cases.doctree
.doctrees/user_guide/: intro.doctree
.github/workflows/: ci.yml  docs.yml  test.yml
_sources/: api.rst.txt  changelog.rst.txt  examples_index.rst.txt  index.rst.txt
_sources/getting_started/: installation.rst.txt  intro.rst.txt  quick_overview.rst.txt  use_cases.rst.txt
_sources/user_guide/: intro.rst.txt
data/Antwerp/Calibration/floodrecords/: floodrecords_VT100.csv  floodrecords_VT2.csv  floodrecords_VT20.csv  floodrecords_VT5.csv  floodrecords_Vf10.csv
data/Antwerp/Calibration/rainfall/: rainfall_CT100.csv  rainfall_CT2.csv  rainfall_CT20.csv  rainfall_CT5.csv  rainfall_Cf10.csv
data/Antwerp/Model building/: Conduit.shp  Conduit.shx  Node.shp  Node.shx  RGs.dbf  RGs.shp  RGs.shx  Rainfall_config.txt  Structures.shp  Structures.shx  Subcatchment.shp  Subcatchment.shx  Waterlevel.csv
data/Antwerp/Results and evaluation/floodrecords/: floodrecords_V1.csv  floodrecords_V10.csv  floodrecords_V11.csv  floodrecords_V12.csv  floodrecords_V13.csv  floodrecords_V14.csv  floodrecords_V15.csv  floodrecords_V16.csv  floodrecords_V17.csv  floodrecords_V18.csv  floodrecords_V19.csv  floodrecords_V2.csv  floodrecords_V20.csv  floodrecords_V21.csv  floodrecords_V22.csv  floodrecords_V23.csv  floodrecords_V24.csv  floodrecords_V25.csv  floodrecords_V26.csv  (+22 more)
data/Eindhoven/: data_catalog_delft3dfm.yml  network_delft3dfm.ini  networkopt_delft3dfm.ini  region.geojson
data/Eindhoven/Delft3DFM/: dimr_config.xml
data/Eindhoven/GUI_exports/: Eindhoven_Branches.shp  Eindhoven_Branches.shx  Eindhoven_Compartments_Compartment.shp  Eindhoven_Compartments_Compartment.shx  Eindhoven_Compartments_OutletCompartment.shx  Eindhoven_Compound Structures.dbf  Eindhoven_Compound Structures.shp  Eindhoven_Compound Structures.shx  Eindhoven_Lateral Sources.shp  Eindhoven_Lateral Sources.shx  Eindhoven_Manholes.shp  Eindhoven_Manholes.shx  Eindhoven_Orifices.dbf  Eindhoven_Orifices.shp  Eindhoven_Orifices.shx  Eindhoven_Outlets.dbf  Eindhoven_Outlets.shp  Eindhoven_Pipes.shp  Eindhoven_Pipes.shx  Eindhoven_Pumps.dbf  Eindhoven_Pumps.shp  Eindhoven_Pumps.shx  Eindhoven_Sewer Connections.dbf  Eindhoven_Sewer Connections.shp  Eindhoven_Sewer Connections.shx  Eindhoven_Weirs.dbf  Eindhoven_Weirs.shp  Eindhoven_Weirs.shx
data/Eindhoven/Model Building/: branches.geojson  data_sources.yml  manholes.geojson  network.ini  network_edges.geojson  network_nodes.geojson  pumps.geojson  weirs.geojson
data/Eindhoven/Simulations/: event_summary.csv
data/Eindhoven/graph/: graph.gpickle  graph_edges.dbf  graph_edges.geojson  graph_edges.shp  graph_edges.shx  graph_nodes.dbf  graph_nodes.geojson  graph_nodes.shp  graph_nodes.shx
data/Gent/Model building/: RGs.dbf  RGs.shp  RGs.shx  Rainfall_config.txt  Waterlevel.csv  Waterwater.csv  conduit.shp  conduit.shx  node.qpj  node.shp  node.shx  structures.shp  structures.shx  subcatchment.shp  subcatchment.shx
dev/: dev_guide.html  dev_install.html  intro.html
docs/: api.rst  changelog.rst  conf.py
docs/dev/: dev_guide.rst  dev_install.rst
docs/getting_started/: installation.rst  intro.rst
docs/source/: conf.py  examples_index.rst  index.rst
docs/source/dev/: dev_install.rst  intro.rst
docs/source/getting_started/: publications.rst  quick_overview.rst
envs/: environment_dev.yaml
examples/: README.rst  Understand_Eindhoven_simulations.ipynb  build_Eindhoven.ipynb  build_Eindhoven_from_simulations.ipynb
examples/Eindhoven/: config.yml
getting_started/: installation.html  intro.html  publications.html  quick_overview.html  use_cases.html
hybridurb/: __init__.py  gis_utils.py  graph_utils.py  main.py  network.py  utils.py
hybridurb/datasetutils/: __init__.py  dataset_from_delft3dfm.py
hybridurb/networksutils/: __init__.py  config.yml  data_catalog.yml  data_catalog_delft3dfm.yml  delft3dfm_utils.py  graph_utils.py  network copy.py  network.py  network_from_delft3dfm.py  networkopt_delft3dfm.ini  networkopt_delft3dfm.yml
hybridurb/networksutils/workflows/: __init__.py  graph.py
hybridurb/runners/: main.py  runner.py
src/: 20190819_DataExploration_v4.1(Gent)_v4.2(Ant).py  20190826_SewerProcessing_v4.1.py  20190826_SewerProcessing_v4.1KW.py  20190904_createSewerGraph_v4.0.py  20210917_createSewerGraph_v4.1.py  20210917_createSewerGraph_v4.1KW.py  20211013_DataExploration_v4.2KW.py  delft3dfm_utils.py  floodMAPPING_funcs_p3.py  hydraulics_utils.py  read_delft3dfm.py  read_drr.py
tests/: test_hybridurb.py
tests/data/: config.yml
user_guide/: intro.html
(+374 files in other folders)
