[tool.poetry]
name = "hybridurb"
version = "0.1.0"
description = "HybridUrb is a Python package to perform hybird urban flood modelling using the methodology proposed in Li & Willems (2020)."
authors = ["xiaohan.li-deltares <xiaohan.li@deltares.nl>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "~3.8"
networkx = "3.0"
gdal = "3.6.1"
hydromt = "0.6.0"
scikit-learn = "1.2.0"
sympy = "1.11.1"
statsmodels = "0.13.5"
momepy = "0.5.4"
meshkernel = "2.0.1"
xugrid = "0.2.1"
# charset-normalizer = "3.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.2.1"
matplotlib = "^3.7.1"
sphinx = "^6.1.3"
pydata_sphinx_theme = "^0.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
