[project]
name = "hybridurb"
description = "HybridUrb is a Python package to perform hybird urban flood modelling using the methodology proposed in Li & Willems (2020)."
authors = [{ name = "Xiaohan Li", email = "xiaohan.li@deltares.nl" },]
dependencies = [
	"hydromt >=0.7.0", # check
	"geopandas >=0.10", # check
	"numpy", # check
	"pandas", # check
	"xarray", # check
	"xugrid", # check
	"meshkernel", # check
	"pyproj", # check
	"shapely >=0.2.0", # check
	"scipy", # check
	"networkx >= 3.0", # check
	"sympy", # check
	"momepy >= 0.5.4", # check
	"hydromt_delft3dfm", # ????
	"pygraphviz", # check
	"matplotlib", # check
	"contextily", # check
	"community", # check
	# "pygeos", # remove dependancy after new xugrid releases
	# "pyflwdir >=0.5.4",
	# "scikit-learn",
	# "statsmodels",
]

requires-python = ">=3.9,<3.11" # support 3.11 after new meshkernelpy releases
readme = "README.rst"
classifiers = [
	# https://pypi.python.org/pypi?%3Aaction=list_classifiers
	"Development Status :: 2 - Pre-Alpha",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering :: Hydrology",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
]
dynamic = ['version']

[project.optional-dependencies]
test = ["pytest>=2.7.3", "pytest-cov", "black", "isort", "matplotlib"]
doc = [
	"nbsphinx",
	"sphinx",
	"sphinx_design",
	"pydata-sphinx-theme",
	"sphinx_autosummary_accessors",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.flit.sdist]
include = ["hybridurb"]
exclude = ["data", "docs", "examples", "envs", "tests", ".github"]

[tool.pytest.ini_options]
filterwarnings = [
	"ignore:distutils Version classes are deprecated:DeprecationWarning",
]

[build-system]
requires = ["flit_core >=3.4.0,<4"]
build-backend = "flit_core.buildapi"
