[project]
name = "hybridurb"
description = "HybridUrb is a Python package to perform hybird urban flood modelling using the methodology proposed in Li & Willems (2020)."
authors = [{ name = "Xiaohan Li", email = "xiaohan.li@deltares.nl" },]
dependencies = [
	"hydromt >=0.9.0",
	"hydromt_delft3dfm >= 0.2.0", 
	"geopandas", 
	"shapely", 
	"pyproj", 
	"numpy", 
	"pandas", 
	"xarray", 
	"meshkernel",  # mesh
	"xugrid",  # mesh
	"networkx",  # graph
	"community",  # graph
	"momepy", # plot
	"matplotlib", # plot
	"contextily", # plot
	"scipy", # statistics
	# "scikit-learn", # statistics
	# "statsmodels", # statistics
	"sympy", # statistics
	"patsy", # runner
]

requires-python = ">=3.9"
readme = "README.rst"
classifiers = [
	# https://pypi.python.org/pypi?%3Aaction=list_classifiers
	"Development Status :: 2 - Pre-Alpha",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering :: Hydrology",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
]
dynamic = ['version']

[project.optional-dependencies]
dev = [
    "black",       # linting
    "isort",        # linting
    "pip>=23.1.2", # needed for recursive dependencies
]
test = ["pytest>=2.7.3", "pytest-cov", "black", "matplotlib"]
doc = [
	"nbsphinx",
	"sphinx",
	"sphinx_design",
	"pydata-sphinx-theme",
	"sphinx_autosummary_accessors",
]
examples = [
  "jupyterlab",      # run examples in jupyter notebook
  "notebook",        # jupyter integration
  "cartopy",		 # plot examples
]

[project.urls]
Documentation = "https://xldeltares.github.io/hybridurb"
Source = "https://github.com/xldeltares/hybridurb"

[tool.black]
line-length = 88
target-version = ['py39']

[build-system]
requires = ["flit_core >=3.4.0,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = ["hybridurb"]
exclude = ["data", "docs", "examples", "envs", "tests", ".github"]

[tool.pytest.ini_options]
filterwarnings = [
	"ignore:distutils Version classes are deprecated:DeprecationWarning",
]

